views/mesas/mesas.style.css
main {
    display: flex;
    padding: 20px;
    flex-direction: column;
    align-items: flex-start;
    gap: 18px;
    align-self: stretch;
}

.searchContainer {
    display: flex;
    padding: 14px;
    flex-direction: column;
    align-items: flex-start;
    gap: 20px;
    align-self: stretch;

    border: 1px solid #8E8E8E;
    background: #FAFAFA;
}

.searchContainer>h1 {
    font-size: 36px;
    font-style: normal;
    font-weight: 400;
}

.options {
    display: flex;
    align-items: center;
    gap: 20px;
}

.optionsContainers {
    display: flex;
    height: 82px;
    flex-direction: column;
    align-items: flex-start;
    gap: 10px;
}

.optionsContainers>label {
    font-size: 17px;
    font-style: normal;
    font-weight: 400;
}

.optionsContainers>input {
    text-align: center;
    width: 100%;
    height: 35%;
}

.optionsContainers>select {
    text-align: center;
    width: 100%;
    height: 40%;
}

input[type='submit'] {
    display: flex;
    padding: 6px 20px;
    justify-content: center;
    align-items: center;
    gap: 10px;
    border: 1px solid #515050;
    background: linear-gradient(180deg, #F8F8F8 0%, #D9D9D9 100%);
    font-size: 15px;
    font-style: normal;
    font-weight: 400;
    transform: translateY(5px);
}

input[type='submit']:hover {
    cursor: pointer;
    background-color: #ffffff;
}

table {
    align-self: stretch;
    border: 1px solid #8E8E8E;
    background: #FFF;
    border-collapse: collapse;
}

thead>tr {
    border: 1px solid #8E8E8E;
    background: linear-gradient(180deg, #FFF 0%, #F2F2F2 100%);

}

thead>tr>th {
    font-style: normal;
    font-weight: 500;
    padding: 8px 0px;
    justify-content: space-between;
    align-self: stretch;
    background: linear-gradient(180deg, #FFF 0%, #F2F2F2 100%);
}

tbody>tr {
    border: 0.5px solid #8E8E8E;
    text-align: center;
    font-size: 16px;
    font-style: normal;
    font-weight: 500;
}

tbody>tr>td {
    padding: 4px 0px;
    justify-content: space-between;
    align-self: stretch;
}


tbody>tr:nth-child(even) {
    /* 2-1 ou 2n */
    background-color: #F8F8F8;
}

